<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/history_category"
            android:layout_width="120dp"
            android:textColor="@color/answer"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/category"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/history_title"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/mixed"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/history_category"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/correct_answer"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/correct_answers"
            android:textColor="#801F2041"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_category" />

        <TextView
            android:id="@+id/answer_count"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_8_10"
            android:textColor="#801F2041"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/correct_answer"
            app:layout_constraintTop_toBottomOf="@id/history_title" />

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/difficulty"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/correct_answer" />

        <TextView
            android:id="@+id/difficulty_t"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/easy"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/difficulty"
            app:layout_constraintTop_toBottomOf="@id/answer_count" />

        <ImageView
            android:id="@+id/popup_menu_iv"
            android:layout_width="18dp"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:src="@drawable/ic_points"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/data"
            android:layout_width="75dp"
            android:layout_height="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/_13_may_2020_21_34"
            android:textColor="#801F2041"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>