<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30sp"
    tools:context=".quizApp.presentation.question.QuestionActivity">

    <TextView
        android:id="@+id/quest_category"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/category"
        android:textColor="@color/answer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toEndOf="@id/quest_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <ProgressBar
        android:id="@+id/quest_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/answer"
        android:backgroundTintMode="@color/colorPink"
        android:indeterminate="false"
        android:orientation="horizontal"
        android:progressBackgroundTint="@color/colorPink"
        android:progressTint="@color/colorPink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quest_category" />

    <TextView
        android:id="@+id/text"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/sim"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quest_progress" />

    <TextView
        android:id="@+id/quest_progressStart"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/zero"
        app:layout_constraintRight_toLeftOf="@id/text"
        app:layout_constraintTop_toBottomOf="@id/quest_progress" />

    <TextView
        android:id="@+id/quest_progressEnd"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/ten"
        app:layout_constraintLeft_toRightOf="@id/text"
        app:layout_constraintTop_toBottomOf="@id/quest_progress" />

    <TextView
        android:id="@+id/quest_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/answer"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintRight_toLeftOf="@id/quest_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <com.example.quizappgeektech.quizApp.Scroll.NonScrollRecyclerView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_question" />


</androidx.constraintlayout.widget.ConstraintLayout>